# roh

./: Cargo.toml  readme.md
src/: audio.rs  bluetooth.rs  config.rs  main.rs  markdown.rs  openai.rs
