[package]
name = "roh"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.12.0"
dirs = "5.0.1"
termimad = "0.30.0"
futures-util = "0.3.30"
btleplug = "0.11.6"
cpal = "0.15.3"
futures = "0.3.31"
hound = "3.5.1"
